MDEV-5706 MariaDB does not build on hurd-i386

backport from 10.0 the fix for:
  MDEV-5756 CMake option to build without thread pool